--- a/packages/epo-react-lib/src/styles/css/global/variables.css
+++ b/packages/epo-react-lib/src/styles/css/global/variables.css
@@ -1,3 +1,29 @@
 @import "@rubin-epo/epo-style-dictionary/legacy/palette.css";
 @import "@rubin-epo/epo-style-dictionary/legacy/tokens.css";
 @import "@rubin-epo/epo-style-dictionary/rubin/tokens.css";
+
+:root {
+  /* @link https://utopia.fyi/space/calculator?c=280,16,1.2,1280,22,1.25,6,2,&s=0.75|0.5|0.25,1.5|2|3|4|6|8,s-l&g=s,l,xl,12 */
+  @utopia spaceScale({
+    minSize: 16,
+    maxSize: 22,
+    positiveSteps: [1.5, 2, 3, 4, 6, 8],
+    negativeSteps: [0.75, 0.5, 0.25],
+    customSizes: ["s-l"],
+    prefix: "size-spacing",
+    relativeTo: "viewport-width",
+  });
+
+  /* @link https://utopia.fyi/type/calculator?c=280,16,1.2,1280,22,1.2,6,2,&s=0.75|0.5|0.25,1.5|2|3|4|6|8,&g=s,l,xl,12 */
+  @utopia typeScale({
+    minFontSize: 16,
+    maxFontSize: 22,
+    minTypeScale: 1.2,
+    maxTypeScale: 1.2,
+    positiveSteps: 6,
+    negativeSteps: 2,
+    prefix: "size-font",
+    relativeTo: "viewport-width"
+  });
+}
+
